# UGent-stuff

AI--Bayesian-networks--Medical-Expert-System/: .gitignore  0.0-titelpagina.tex  BayesianNetworks_Naessens_Tom.tex  BayesianNetworks_Naessens_Tom.xbn  README.md
AI--Expert-systems--A-Star/: 0.0-titelpagina.tex  README.md  decaesteckerd-naessenst-path.clp  decaesteckerd-naessenst-report.tex
BioComp--HW1/: README.txt
BioComp--HW3/: README.md  intersection.py  make_peptides.sh  one_to_rule_them_all.sh  scriptBB  subtract.py  tom_create_intersect.sh  tom_subtract_all.sh
Compilers--practica/: .gitignore  README.md
DA1--Taak1-Collecties/: build.xml  out.txt
DA1--Taak2-Recursie/: build.xml
DA1--Taak3-Backtracking/: build.xml  verslag.tex
DA3--Project-Burrows-Wheeler/: BWT.c  BWT.h  BitWriter.c  BitWriter.h  Huffman.c  Huffman.h  IO.c  IO.h  MTF.c  MTF.h  main.c  main.h
DMA--Error-correction-in-digital-video/: .gitignore  Errorconcealment.sln  decode_all.sh  group_complex.sh  group_simple.sh  natural_complex.sh  natural_simple.sh  psnr_all.sh  synthetic_complex.sh  synthetic_simple.sh
FSS--Project/: .dropbox  (+5 more)
HPR--Assignment-1/matmat/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  matBLAS.txt  matBlocked.txt  matLinear.txt  matStrided.txt  matmat  result.txt  setup.sh
HPR--Assignment-1/matvec/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  matvec  matvec.cpp  matvec255  matvec255.cpp  matvec256  matvec256.cpp  matvec64  matvec64.cpp  result.txt  result256.txt  setup.sh  valgrind255.txt  valgrind256.txt  valgrind64.txt
(+1271 files in other folders)
